--- a/presentation.tex
+++ b/presentation.tex
@@ -1,11 +1,11 @@
 \documentclass[11pt]{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage[english]{babel}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{graphicx}
+\usepackage[french]{babel}
 %\usepackage{siunitx}
 
 %\usepackage{subfig}
@@ -22,16 +22,14 @@
 \begin{document}
 	\setbeamercovered{transparent}
 	\setbeamercolor{institute}{fg=orange!50!red!90}
-	\author{T. Otsu\and T. Ando\and Y. Takiguchi\and Y. Ohtake\and H. Toyoda, H. Itoh}
+	\author{Alain Delaet \and André Kalouguine}
 	\setbeamercolor{block title}{bg=blue!15,fg=purple}
 	\setbeamercolor{block body}{bg=blue!5,fg=black} 
 	\setbeamertemplate{sidebar right}{}
 	\title{Décohérence des systèmes quantiques uniques}
-	\subtitle{\texttt{Direct evidence for three-dimensional
-		off-axis trapping with single
-		Laguerre-Gaussian beam}}
-	\titlegraphic{André Kalouguine}
-	\institute{Colloquium at E.N.S. de Lyon}
+	\subtitle{\texttt{Systèmes quantiques uniques, trajectoires et décohŕence}}
+	\institute{E.N.S. de Lyon}
+	\date{22 mai 2018}
 
 	%\setbeamercovered{transparent}
 	\setbeamertemplate{footline}{\hspace{0.5em}\insertframenumber}
