apres le stash, remodif du tex

--- a/presentation.tex
+++ b/presentation.tex
@@ -276,6 +276,16 @@ Pas une superposition:
 
 \begin{frame}{Équation de Lindblad}
 \framesubtitle{Opérateurs de Kraus}
+Le système ouvert:
+\[
+\rho_A(t)=U(t)\rho_A(0)U^{\dag}(t)
+\]
+L'évolution du système complet $\mathcal{S}\cup\mathcal{E}$ (avec l'environnement) est régie par un opérateur unitaire qui répond a quelques propriétés:
+\begin{itemize}
+\item Conservation de la trace de la matrice de densité
+\item Conservation de la positivité
+\item $\cdots$
+\end{itemize}
 
 \end{frame}
 
